--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,35 +9,35 @@
   }
 }
 @layer components {
-  :where(.markdown) > *:not(hr, div) {
+  .markdown > *:not(hr, div) {
     max-width: 72ch;
   }
-  :where(.markdown) > :where(*):not(h2, h3, h4, h5) + * {
+  .markdown > :where(*):not(h2, h3, h4, h5) + * {
     margin-block-start: theme("spacing.7");
   }
-  :where(.markdown) > *:where(h2, h3, h4, h5) + * {
-    margin-block-start: theme("spacing[0.5]");
+  .markdown > *:where(h2, h3, h4, h5) + * {
+    margin-block-start: theme("spacing.1");
   }
-  :where(.markdown) > p a {
+  .markdown > p a {
     text-decoration: underline;
     color: theme("colors.blue.500");
   }
-  :where(.markdown) > p a:hover {
+  .markdown > p a:hover {
     text-decoration: none;
     color: theme("colors.blue.600");
   }
-  :where(.markdown) > h2 {
+  .markdown > h2 {
     @apply font-semibold text-2xl leading-snug;
   }
-  :where(.markdown) > h3 {
+  .markdown > h3 {
     @apply font-semibold text-xl leading-snug;
   }
-  :where(.markdown) > ul {
+  .markdown > ul {
     list-style: disc;
     list-style-position: outside;
     padding-inline-start: 1.25rem;
   }
-  :where(.markdown) li + li {
+  .markdown li + li {
     margin-block-start: 0.5rem;
   }
 
@@ -133,7 +133,7 @@
   }
   a:where(.navds-stepper__content) {
     color: var(--navds-global-color-blue-500);
-    text-decoration: underline;
+    text-decoration: none;
   }
   a:where(.navds-stepper__content):after {
     content: " ";
@@ -144,27 +144,27 @@
     bottom: 0.875rem;
   }
   a:hover:where(.navds-stepper__content) {
-    text-decoration: none;
+    text-decoration: underline;
   }
 
   /* Active & Complete */
+  :where(.navds-stepper__item--complete) {
+    color: var(--navds-global-color-blue-500);
+  }
   :where(.navds-stepper__item--active) {
     font-weight: 600;
   }
+  :where(.navds-stepper__item--complete) .navds-stepper__marker {
+    background-color: var(--navds-global-color-blue-50);
+  }
   :where(.navds-stepper__item--active) .navds-stepper__content {
     color: var(--navds-global-color-blue-800);
-  }
-  :where(.navds-stepper__item--complete) {
-    color: var(--navds-global-color-blue-500);
   }
   :where(.navds-stepper__item--active) .navds-stepper__marker {
     color: var(--navds-global-color-white);
   }
   :where(.navds-stepper__item--active) .navds-stepper__marker {
     background-color: var(--navds-global-color-deepblue-500);
-  }
-  :where(.navds-stepper__item--complete) .navds-stepper__marker {
-    background-color: var(--navds-global-color-blue-50);
   }
 }
 @layer utilities {
@@ -211,7 +211,7 @@
   .bg-select {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' %3E%3Cpath d='M18 9L12 15L6 9' stroke='%23404040' stroke-width='1.75'%3E%3C/path%3E%3C/svg%3E");
     background-repeat: no-repeat;
-    background-position: calc(100% - 0.875rem) 50%;
+    background-position: calc(100% - 0.5rem) 50%;
   }
   .stroke-semibold * {
     stroke-width: 2px;
