--- a/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
@@ -25,12 +25,12 @@ permalink: '/produktoversikt-samarbeidspartner/'
       </div>
     </div>
 
-    <div class="mt-8 grid lg:mt-12 grid-cols-layout">
-      <div class="w-full pb-20 grid gap-8 lg:gap-x-16 lg:items-start col-narrow lg:col-wide">
-        <ul class="text-xl max-w-prose">
+    <div class="grid mt-8 lg:mt-12 grid-cols-layout">
+      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start col-narrow lg:col-wide">
+        <ul class="flex flex-wrap gap-2 text-xl max-w-prose">
         {%- for item in roleFilter -%}
-          <li class="border-t border-gray-300">
-            <a class="relative z-10 flex px-3 py-3 -mx-3 rounded ring-1 ring-transparent fine:hover:ring-deepblue-50 fine:hover:bg-deepblue-50" href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/">{{ item | safe }}</a>
+          <li class="">
+            <a class="relative z-10 flex px-6 py-2 border border-gray-300 rounded-full fine:hover:bg-blue-50" href="/produktoversikt-samarbeidspartner/{{ item | slugify }}/">{{ item | safe }}</a>
           </li>
         {%- endfor -%}
         </ul>
