--- a/src/pages/soknad-og-skjema/foreldrepenger.njk
+++ b/src/pages/soknad-og-skjema/foreldrepenger.njk
@@ -9,25 +9,28 @@ order: 8
 {%- extends 'base-basic.njk' -%}
 
 {%- block content -%}
-  <main class="grid py-8 text-lg grid-cols-layout min-h-[70vh]" x-data="{ stepperOpen: false }">
-    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full auto-rows-min">
+  <main class="text-lg min-h-[70vh] bg-gray-50" x-data="{ stepperOpen: false }">
+    <div class="grid pt-10 pb-6 bg-white grid-cols-layout ">
+      <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start w-full auto-rows-min">
 
-      {# Pictogram #}
-      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 -top-2 md:relative hidden xs:block') | safe }}
+        {# Pictogram #}
+        {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 -top-2 md:relative hidden xs:block') | safe }}
 
-      {# Intro #}
-      <div class="md:col-start-2 md:row-start-1">
-        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        <p class="mt-2 text-base tracking-wider uppercase opacity-70">
-          {{ kicker | upper }}
-          {{ '–' if form }}
-          {{ form | safe }}
-        </p>
+        {# Intro #}
+        <div class="md:col-start-2 md:row-start-1">
+          <p class="text-base tracking-wider uppercase opacity-70">
+            {{ kicker | upper }}
+            {{ '–' if form }}
+            {{ form | safe }}
+          </p>
+          <h1 class="mt-2 text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+        </div>
       </div>
-
-      <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
-        <div class="mt-12 text-lg max-w-prose markup">
-          <form x-data="{ applicationFormat: 'digital' }">
+    </div>
+    <div class="grid py-8 grid-cols-layout">
+      <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full auto-rows-min">
+        <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
+          <form class="text-lg max-w-prose markup" x-data="{ applicationFormat: 'digital' }">
             <fieldset>
               <legend class="font-semibold">Hvordan vil du sende søknaden?</legend>
               <ul class="grid mt-1 justify-items-start">
@@ -67,7 +70,6 @@ order: 8
             </div>
           </form>
         </div>
-
       </div>
     </div>
   </main>
