--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -112,12 +112,14 @@ permalink: '/produktoversikt-arbeidsgiver/'
                   {{ filterGroup({
                     array: areaFilter,
                     title: 'Velg område',
-                    value: 'areaFilter'
+                    value: 'areaFilter',
+                    showAll: true
                   }) }}
                   {{ filterGroup({
                     array: typeFilter,
                     title: 'Velg type',
-                    value: 'typeFilter'
+                    value: 'typeFilter',
+                    showAll: true
                   }) }}
                 </div>
               </div>
@@ -155,12 +157,14 @@ permalink: '/produktoversikt-arbeidsgiver/'
             {{ filterGroup({
               array: areaFilter,
               title: 'Velg område',
-              value: 'areaFilter'
+              value: 'areaFilter',
+              showAll: true
             }) }}
             {{ filterGroup({
               array: typeFilter,
               title: 'Velg type',
-              value: 'typeFilter'
+              value: 'typeFilter',
+              showAll: true
             }) }}
           </div>
         </div>
