--- a/src/_includes/macros/filterGroup.njk
+++ b/src/_includes/macros/filterGroup.njk
@@ -3,12 +3,13 @@
 #}
 
 {%- macro filterGroup(params) -%}
-<fieldset class="mt-6 lg:mt-8">
+<fieldset class="">
   <legend class="text-sm tracking-widest uppercase opacity-70">{{ params.title }}</legend>
 
-  {%- set buttonClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base rounded-full focus:ring-2" -%}
+  {%- set buttonClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base text-left rounded-full focus:ring-2" -%}
 
   <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+    {%- if params.showAll -%}
     <li>
       <button
         type="button"
@@ -17,14 +18,15 @@
         x-bind:class="{{ params.value }} === 'alle' ? 'text-white bg-deepblue-500' : 'bg-gray-100 fine:hover:bg-deepblue-100'"
       >Alle</button>
     </li>
+    {%- endif -%}
     {%- for item in params.array -%}
     <li>
       <button
         type="button"
         class="{{ buttonClasses }}"
         x-on:click="{{ params.value }} = '{{ item | slugify }}', updateCount($refs)"
-        x-bind:class="{{ params.value }} === '{{ item | slugify }}' ? 'text-white bg-deepblue-500' : 'bg-gray-100 fine:hover:bg-deepblue-100'"
-      >{{ item }}</button>
+        x-bind:class="{{ params.value }} === '{{ item | slugify }}' ? 'text-white bg-deepblue-500' : 'bg-deepblue-50 fine:hover:bg-deepblue-100'"
+      >{{ item | safe }}</button>
     </li>
     {%- endfor -%}
   </ul>
