--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -1,5 +1,6 @@
 ---
-title: 'Søknad og skjema fra A til Å'
+title: 'Søknad og skjema'
+kicker: 'Fra A til Å'
 description: 'Velg pengestøtten eller tjenesten det gjelder. Du kan søke eller velge type og område.'
 tags: ['template']
 order: '5'
@@ -74,20 +75,18 @@ permalink: "/produktoversikt/"
 
       {# Intro #}
       <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
-        <p class="text-base tracking-wider uppercase opacity-70">
-          Oversikt
-        </p>
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        <p class="max-w-2xl mt-2 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
+        <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
+        <p class="max-w-2xl mt-8 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
       </div>
 
 
       <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8">
 
-        <div class="md:mt-8 md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
+        <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
           <button
             type="button"
-            class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
+            class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 mb-8 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
             x-on:click="filterDrawer = true"
             x-bind:aria-expanded="filterDrawer">
             {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
@@ -107,15 +106,6 @@ permalink: "/produktoversikt/"
             <form class="flex flex-col h-full bg-white shadow-drawer col-narrow lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
               <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
                 <div class="relative grid gap-8 pt-6">
-                  <div>
-                    <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-                    <div class="relative mt-1">
-                    <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                      {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                    </span>
-                    <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
-                    </div>
-                  </div>
                   {{ filterGroup({
                     array: areaFilter,
                     title: 'Velg område',
@@ -128,6 +118,15 @@ permalink: "/produktoversikt/"
                     value: 'typeFilter',
                     showAll: true
                   }) }}
+                  <div>
+                    <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
+                    <div class="relative mt-1">
+                    <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                      {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                    </span>
+                    <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
@@ -153,15 +152,6 @@ permalink: "/produktoversikt/"
           </button>
 
           <div class="hidden gap-8 md:grid">
-            <div>
-              <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-              <div class="relative mt-1">
-                <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                  {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                </span>
-                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
-              </div>
-            </div>
             {{ filterGroup({
               array: areaFilter,
               title: 'Velg område',
@@ -174,22 +164,31 @@ permalink: "/produktoversikt/"
               value: 'typeFilter',
               showAll: true
             }) }}
+            <div>
+              <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
+              <div class="relative mt-1">
+                <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                  {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                </span>
+                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="mt-8 md:col-start-1 md:row-start-1">
+        <div class="md:col-start-1 md:row-start-1">
           <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {%- for product in products | sort(true, false, 'title') | reverse -%}
               <div
                 x-data="{ expanded: false }"
-                class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
+                class="border-t focus-within:z-10 border-deepblue-100 c-product-tile"
                 x-show="filterItem($el)"
                 data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
                 data-area="alle {% for item in product.area %}{{ item | slugify }} {% endfor %}">
 
-                <div class="relative flex items-center gap-4 py-5 text-left rounded-lg px-clamp-gap sm:px-4 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+                <div class="relative flex items-center gap-4 p-4 pr-8 text-left rounded-lg md:py-6 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
                   {%- if product.icon -%}
                     {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
                   {%- endif -%}
@@ -208,18 +207,19 @@ permalink: "/produktoversikt/"
                     </p>
                   </div>
                   <button
-                      type="button"
-                      x-on:click="expanded = !expanded"
-                      class="absolute inset-0 flex items-center justify-end w-full pr-4 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
-                      aria-expanded="false"
-                      x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
-                      x-bind:aria-expanded="expanded">
+                    type="button"
+                    x-on:click="expanded = !expanded"
+                    class="absolute inset-0 flex items-center justify-end w-full pr-3 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
+                    aria-expanded="false"
+                    x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
+                    x-bind:aria-expanded="expanded"
+                  >
                     <span class="sr-only">Vis</span>
                     {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 text-deepblue-400 fine:group-hover:text-deepblue-600 group-aria-expanded:text-deepblue-600 transition duration-100 group-aria-expanded:rotate-180') | safe }}
                   </button>
                 </div>
 
-                <div class="pt-5 pb-8 px-clamp-gap relative min-h-[20vh] markdown sm:pl-20 sm:pr-0 mb-4" x-bind:hidden="!expanded" hidden>
+                <div class="pt-5 pb-12 px-clamp-gap relative min-h-[20vh] markdown sm:pl-20 sm:pr-0 mb-8" x-bind:hidden="!expanded" hidden>
                   <p>{{ product.ingress }}</p>
                   {%- if product.contentBlocks -%}
                     {%- for block in product.contentBlocks -%}
