--- a/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
@@ -64,191 +64,191 @@ permalink: '/produktoversikt-samarbeidspartner/'
       });
       updateCount()"
   >
-    <div class="relative w-full md:pl-32 col-narrow md:col-wide">
-      <div class="right-0 float-right mb-2 ml-4 md:absolute md:left-0 md:ml-0">
-        {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[20vw] h-auto overflow-hidden max-w-[5.75rem] aspect-square') | safe }}
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
+
+      {# Pictogram #}
+      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 md:relative') | safe }}
+
+      {# Intro #}
+      <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
+        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+        <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
+        <p class="max-w-2xl mt-8 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
       </div>
 
-      <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+      <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8" x-show="roleFilter != 'alle'">
 
-      <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
-      <p class="max-w-2xl mt-4 text-xl md:mt-3 md:text-2xl">{{ description | safe }}</p>
-    </div>
+        <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
 
-    <div class="grid w-full gap-8 pb-20 mt-12 md:pl-32 md:gap-x-16 md:items-start md:grid-cols-sidebar col-narrow md:col-wide" x-show="roleFilter != 'alle'">
+          <button
+            class="flex items-center mb-8 justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
+            x-on:click="filterDrawer = true"
+            x-bind:aria-expanded="filterDrawer">
+            {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
+            <span>Søk eller velg type og område</span>
+          </button>
 
-      <div class="relative md:row-start-1 md:row-span-3 md:col-start-2" x-data="{ filterDrawer: false }">
-        <button
-          class="flex items-center justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
-          x-on:click="filterDrawer = true"
-          x-bind:aria-expanded="filterDrawer">
-          {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
-          <span>Søk eller velg type og område</span>
-        </button>
+          <div
+            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md md:hidden"
+            x-show="filterDrawer"
+            x-transition:enter="transition ease-out duration-300"
+            x-transition:enter-start="translate-x-full opacity-0"
+            x-transition:enter-end="translate-x-0 opacity-100"
+            x-transition:leave="transition ease-in duration-300"
+            x-transition:leave-start="translate-x-0 opacity-100"
+            x-transition:leave-end="translate-x-full opacity-0"
+          >
+            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow md:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
+              <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
+                <div class="relative grid gap-8 pt-6" >
+                  {{ filterGroup({
+                    array: roleFilter,
+                    title: 'Velg rolle',
+                    value: 'roleFilter'
+                  }) }}
 
-        <div
-          class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md md:hidden"
-          x-show="filterDrawer"
-          x-transition:enter="transition ease-out duration-300"
-          x-transition:enter-start="translate-x-full opacity-0"
-          x-transition:enter-end="translate-x-0 opacity-100"
-          x-transition:leave="transition ease-in duration-300"
-          x-transition:leave-start="translate-x-0 opacity-100"
-          x-transition:leave-end="translate-x-full opacity-0"
-        >
-          <form class="flex flex-col h-full bg-white shadow-drawer col-narrow md:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
-            <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
-              <div class="relative grid gap-8 pt-6" >
-                {{ filterGroup({
-                  array: roleFilter,
-                  title: 'Velg rolle',
-                  value: 'roleFilter'
-                }) }}
+                  {{ filterGroup({
+                    array: typeFilter,
+                    title: 'Velg type',
+                    value: 'typeFilter',
+                    showAll: true
+                  }) }}
 
-                <div>
-                  <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-                  <div class="relative mt-1">
-                    <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                      {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                    </span>
-                    <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                  <div>
+                    <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
+                    <div class="relative mt-1">
+                      <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                        {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                      </span>
+                      <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                    </div>
                   </div>
                 </div>
-
-                {{ filterGroup({
-                  array: typeFilter,
-                  title: 'Velg type',
-                  value: 'typeFilter',
-                  showAll: true
-                }) }}
               </div>
-            </div>
-            <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
-            <div class="px-6 py-4 bg-gray-50">
-              <button type="button" class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
-            </div>
-          </form>
-        </div>
-        <button
-          type="button"
-          class="fixed inset-0 z-40 bg-black/25"
-          x-show="filterDrawer"
-          x-on:click="filterDrawer = false"
-          x-transition:enter="transition ease-out duration-200"
-          x-transition:enter-start="opacity-0"
-          x-transition:enter-end="opacity-100"
-          x-transition:leave="transition ease-in duration-200"
-          x-transition:leave-start="opacity-100"
-          x-transition:leave-end="opacity-0"
-        >
-          <span class="sr-only">Lukk</span>
-        </button>
+              <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
+              <div class="px-6 py-4 bg-gray-50">
+                <button type="button" class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
+              </div>
+            </form>
+          </div>
+          <button
+            type="button"
+            class="fixed inset-0 z-40 bg-black/25"
+            x-show="filterDrawer"
+            x-on:click="filterDrawer = false"
+            x-transition:enter="transition ease-out duration-200"
+            x-transition:enter-start="opacity-0"
+            x-transition:enter-end="opacity-100"
+            x-transition:leave="transition ease-in duration-200"
+            x-transition:leave-start="opacity-100"
+            x-transition:leave-end="opacity-0"
+          >
+            <span class="sr-only">Lukk</span>
+          </button>
 
-        <div class="hidden gap-8 md:grid">
-          {{ filterGroup({
-            array: roleFilter,
-            title: 'Velg rolle',
-            value: 'roleFilter'
-          }) }}
-
-          <div class="">
-            <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-            <div class="relative mt-1">
-              <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-              </span>
-              <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
+          <div class="hidden gap-8 md:grid">
+            {{ filterGroup({
+              array: roleFilter,
+              title: 'Velg rolle',
+              value: 'roleFilter'
+            }) }}
+            {{ filterGroup({
+              array: typeFilter,
+              title: 'Velg type',
+              value: 'typeFilter',
+              showAll: true
+            }) }}
+            <div class="">
+              <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
+              <div class="relative mt-1">
+                <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                  {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                </span>
+                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
+              </div>
             </div>
           </div>
-
-          {{ filterGroup({
-            array: typeFilter,
-            title: 'Velg type',
-            value: 'typeFilter',
-            showAll: true
-          }) }}
         </div>
-      </div>
 
-      <div class="md:col-start-1">
-        <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
+        <div class="md:col-start-1 md:row-start-1">
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
 
-        <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
-          {%- for product in products | sort(true, false, 'title') | reverse -%}
-            <div
-              x-data="{ expanded: false }"
-              class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
-              x-show="filterItem($el)"
-              data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
-              data-role="alle {% for item in product.role %}{{ item | slugify }} {% endfor %}"
-            >
+          <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
+            {%- for product in products | sort(true, false, 'title') | reverse -%}
+              <div
+                x-data="{ expanded: false }"
+                class="border-t focus-within:z-10 c-product-tile border-deepblue-100"
+                x-show="filterItem($el)"
+                data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
+                data-role="alle {% for item in product.role %}{{ item | slugify }} {% endfor %}"
+              >
 
-              <div class="relative flex items-center gap-4 py-5 text-left rounded-lg px-clamp-gap sm:px-4 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
-                {%- if product.icon -%}
-                  {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
-                {%- endif -%}
-                <div class="grid gap-1">
-                  <p class="text-base opacity-80">
-                  </p>
-                  <h2 class="text-xl font-semibold leading-tight">
-                    {{ product.title | safe }}
-                  </h2>
-                  <p class="text-base">
-                    {% for item in product.type %}
-                      <span>{{ item }}</span>,
-                    {% endfor %}
-                    {% for item in product.area %}
-                      <span class="">{{ item }}</span>{{ ', ' if loop.length > 1 and not loop.last }}
-                    {% endfor %}
-                  </p>
+                <div class="relative flex items-center gap-4 p-4 pr-8 text-left rounded-lg md:py-6 focus-within:z-20" x-bind:class="expanded ? 'bg-deepblue-50 ring-1 ring-deepblue-50 fine:hover:bg-deepblue-100' : 'fine:hover:bg-deepblue-100'">
+                  {%- if product.icon -%}
+                    {{ product.icon | svgContents('w-12 h-12 shrink-0') | safe }}
+                  {%- endif -%}
+                  <div class="grid gap-1">
+                    <p class="text-base opacity-80">
+                    </p>
+                    <h2 class="text-xl font-semibold leading-tight">
+                      {{ product.title | safe }}
+                    </h2>
+                    <p class="text-base">
+                      {% for item in product.type %}
+                        <span>{{ item }}</span>,
+                      {% endfor %}
+                      {% for item in product.area %}
+                        <span>{{ item }}</span>{{ ', ' if loop.length > 1 and not loop.last }}
+                      {% endfor %}
+                    </p>
+                  </div>
+                  <button
+                      type="button"
+                      x-on:click="expanded = !expanded"
+                      class="absolute inset-0 flex items-center justify-end w-full pr-3 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
+                      aria-expanded="false"
+                      x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
+                      x-bind:aria-expanded="expanded">
+                    <span class="sr-only">Vis</span>
+                    {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
+                  </button>
                 </div>
-                <button
-                    type="button"
-                    x-on:click="expanded = !expanded"
-                    class="absolute inset-0 flex items-center justify-end w-full pr-4 rounded-sm sm:rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white"
-                    aria-expanded="false"
-                    x-bind:class="expanded ? 'ring ring-white' : 'fine:hover:ring fine:hover:ring-white'"
-                    x-bind:aria-expanded="expanded">
-                  <span class="sr-only">Vis</span>
-                  {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
-                </button>
-              </div>
 
-              <div class="pt-5 pb-8 px-clamp-gap relative min-h-[20vh] markdown sm:px-20 mb-4" x-bind:hidden="!expanded" hidden>
-                <p>{{ product.ingress }}</p>
+                <div class="pt-5 pb-8 px-clamp-gap relative min-h-[20vh] markdown sm:px-20 mb-4" x-bind:hidden="!expanded" hidden>
+                  <p>{{ product.ingress }}</p>
 
-                {%- if product.contentBlocks -%}
-                  {%- for block in product.contentBlocks -%}
-                  {%- include "partials/contentBlocks.njk" -%}
-                  {%- endfor -%}
-                {%- endif -%}
+                  {%- if product.contentBlocks -%}
+                    {%- for block in product.contentBlocks -%}
+                    {%- include "partials/contentBlocks.njk" -%}
+                    {%- endfor -%}
+                  {%- endif -%}
+                </div>
               </div>
-            </div>
-          {%- endfor -%}
+            {%- endfor -%}
+          </div>
+          <div x-show="count === 0" class="p-6 py-8 text-center overflow-hidden grid items-center leading-snug rounded-lg bg-gray-100 min-h-[4.75rem] md:col-span-6">
+            <p class="max-w-prose">Ingen søknader eller skjema er merket med denne kombinasjonen av type og område.</p>
+          </div>
         </div>
-        <div x-show="count === 0" class="p-6 py-8 text-center overflow-hidden grid items-center leading-snug rounded-lg bg-gray-100 min-h-[4.75rem] md:col-span-6">
-          <p class="max-w-prose">Ingen søknader eller skjema er merket med denne kombinasjonen av type og område.</p>
+
+        <div class="p-4 bg-orange-100 rounded-lg md:col-start-1 md:px-6 md:py-5">
+          <h3 class="text-xl font-semibold">
+            Klage eller anke på vedtak?
+          </h3>
+          <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
+          <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
         </div>
+
       </div>
 
-      <div class="p-4 bg-orange-100 rounded-lg md:col-start-1 md:px-6 md:py-5">
-        <h3 class="text-xl font-semibold">
-          Klage eller anke på vedtak?
-        </h3>
-        <p class="mt-2 max-w-prose">Hvis du har fått et vedtak fra NAV og du er uenig i vedtaket, har du rett til å klage eller anke.</p>
-        <p class="mb-2 mt-7"><a href="#" class="underline text-deepblue-600 fine:hover:no-underline fine:hover:text-deepblue-700">Les mer om dine klagerettigheter</a>.</p>
+      <div class="mt-12 md:col-start-2" x-show="roleFilter === 'alle'">
+        <ul class="grid gap-3 xs:grid-cols-2 md:gap-4 md:grid-cols-3">
+          {% for item in roleFilter %}
+          <li class="grid">
+            <a class="relative z-10 flex px-4 py-4 rounded-lg bg-deepblue-100 fine:hover:bg-blue-50 xs:min-h-24" href="/produktoversikt-samarbeidspartner/?role={{ item | slugify }}&type=alle">{{ item | safe }}</a>
+          </li>
+          {% endfor %}
+        </ul>
       </div>
-
-    </div>
-
-    <div class="grid mt-12 md:pl-32 col-narrow md:col-wide" x-show="roleFilter === 'alle'">
-      <ul class="grid gap-3 xs:grid-cols-2 md:gap-4 md:grid-cols-3">
-        {% for item in roleFilter %}
-        <li class="grid">
-          <a class="relative z-10 flex px-4 py-4 rounded-lg bg-deepblue-100 fine:hover:bg-blue-50 xs:min-h-24" href="/produktoversikt-samarbeidspartner/?role={{ item | slugify }}&type=alle">{{ item | safe }}</a>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
   </main>
 {%- endblock -%}
