--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,4 +1,4 @@
-<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="items-center min-h-screen font-mono text-xl text-white bg-black grid md:text-2xl">
+<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="grid items-center min-h-screen font-mono text-xl text-white bg-deepblue-800 md:text-2xl">
   <div class="grid grid-cols-layout py-clamp-gap">
     <h2 class="text-base font-semibold tracking-widest uppercase col-wide text-deepblue-300">Sider i prototypen</h2>
     <ul class="divide-y divide-gray-400/25 col-wide">
