--- a/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
+++ b/src/pages/ettersende-dokumentasjon/ettersende-dokumentasjon.njk
@@ -1,4 +1,5 @@
 ---
+type: 'Oversikt'
 title: 'Ettersende dokumentasjon fra A til Å'
 description: 'Skal du ettersende dokumentasjon til en søknad, klage eller anke? Velg stønaden eller tjenesten det gjelder. Du kan søke eller velge type og område.'
 tags: ['template']
