--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -7,6 +7,7 @@ order: 4
 
 {%- from "macros/button.njk" import button -%}
 {%- from "macros/microcard.njk" import microcard -%}
+{%- from "macros/tile.njk" import tile -%}
 
 {%- block content -%}
   <main class="grid py-8 text-lg md:py-12 grid-cols-layout">
