--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -1,4 +1,5 @@
 ---
+type: 'Oversikt'
 title: 'Søknad og skjema'
 kicker: 'Fra A til Å'
 description: 'Velg pengestøtten eller tjenesten det gjelder. Du kan søke eller velge type og område.'
