--- a/src/pages/soknad-og-skjema/foreldrepenger.njk
+++ b/src/pages/soknad-og-skjema/foreldrepenger.njk
@@ -1,6 +1,7 @@
 ---
-title: Søknad om foreldrepenger
-kicker: Søknad
+type: 'Mellomsteg'
+title: 'Søk om foreldrepenger'
+kicker: 'Søknad'
 form: 'NAV-XXXXXX'
 tags: ['template']
 permalink: "/soknad-og-skjema/{{ page.fileSlug }}/"
